# mofa-input

./: .gitignore  Cargo.toml  README copy.md  README.md
cpp/: llm_server.cpp
mofa-macos-ime/: .gitignore  Cargo.toml  LICENSE  MODEL_LIST.md  README.md  build.rs  cpp
mofa-macos-ime/src/: main.rs
mofa-macos-ime/src/ime/: audio.rs  config.rs  hotkey_tap.rs  inject.rs  overlay.rs  pipeline.rs  text_model.rs  tray.rs
src/asr/: mod.rs
src/llm/: mod.rs
