[package]
name = "mofa-macos-ime"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "mofa-macos-ime"

[dependencies]
anyhow = "1.0"
cpal = "0.15"
dirs = "5.0"
libc = "0.2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
core-graphics = "0.22"
cocoa = "0.24"
objc = "0.2"
dispatch = "0.2"
egui = "0.24"
eframe = { version = "0.24", features = ["default"] }
reqwest = { version = "0.11", features = ["blocking", "stream"] }

mofa-input = { path = "../demo-app" }

[[bin]]
name = "mofa-macos-ime"
path = "src/main.rs"

[[bin]]
name = "model-manager"
path = "src/bin/model_manager.rs"
